--- a/index.html
+++ b/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <title>Document</title>
 </head>
+
 <body>
     <div class="header">
         <h3 class="white-text">Header Logo</h3>
@@ -16,12 +18,15 @@
         </div>
     </div>
     <div class="top-section">
-        <div class="left-panel">
-            <h1 class="white-text">This website is awesome</h1>
-            <p class="white-text">This website has some subtext that goes here under the main title. It is a smaller font and the color is lower contrast</p>
-            <button>Sign up</button>
+        <div class="left-panel white-text">
+            <h1>This website is awesome</h1>
+            <p>This website has some subtext that goes here under the main title. It is a smaller
+                font and the color is lower contrast</p>
+            <span class="button">Sign up</span>
         </div>
-        <div class="image">This is a placeholder for an image</div>
+        <div class=right-panel>
+            <div>This is a placeholder for an image</div>
+        </div>
     </div>
     <div class="information">
         <h2 class="black-text">Some random information.</h2>
@@ -45,7 +50,8 @@
         </div>
     </div>
     <div class="quote">
-        <p class="god-text">This is an inspiring quote, or a testimonial from a customer. Maybe it is just filling up space, or maybe people will actually read it. Who knows. All I know is that it looks nice.</p>
+        <p class="god-text">This is an inspiring quote, or a testimonial from a customer. Maybe it is just filling up
+            space, or maybe people will actually read it. Who knows. All I know is that it looks nice.</p>
         <h3 class="god-name">-Thor, God of Thunder</h3>
     </div>
     <div class="bottom-section">
@@ -60,6 +66,7 @@
     <div class="footer">
         <h class="white-text">Copyright The Odin Project 2021</h>
     </div>
-    
+
 </body>
+
 </html>
