Added mid and bottom sections, still needs a lot of polish and aditions

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
     <div class="quote">
         <p class="god-text">This is an inspiring quote, or a testimonial from a customer. Maybe it is just filling up
             space, or maybe people will actually read it. Who knows. All I know is that it looks nice.</p>
-        <h3 class="god-name">-Thor, God of Thunder</h3>
+        <h3 clas="god-name">-Thor, God of Thunder</h3>
     </div>
     <div class="bottom-section">
         <div class="blue-banner">
@@ -60,7 +60,7 @@
                 <h3 class="white-text">Call to action! It is time!</h3>
                 <p class="white-text">Sign up for our product by clicking that button right over there!</p>
             </div>
-            <button class="white-border">Sign up</button>
+            <span class="white-border white-text">Sign up</span>
         </div>
     </div>
     <div class="footer">
