Added almost finished version

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 <body>
     <div class="header">
         <h3 class="white-text">Header Logo</h3>
-        <div class="white-text">
-            <a href="http://www.youtube.com">header link one</a>
-            <a href="http://www.youtube.com">header link two</a>
-            <a href="http://www.youtube.com">header link three</a>
+        <div class="links">
+            <a class="white-text" href="http://www.youtube.com">header link one</a>
+            <a class="white-text" href="http://www.youtube.com">header link two</a>
+            <a class="white-text" href="http://www.youtube.com">header link three</a>
         </div>
     </div>
     <div class="top-section">
@@ -52,15 +52,17 @@
     <div class="quote">
         <p class="god-text">This is an inspiring quote, or a testimonial from a customer. Maybe it is just filling up
             space, or maybe people will actually read it. Who knows. All I know is that it looks nice.</p>
-        <h3 clas="god-name">-Thor, God of Thunder</h3>
+        <div class="god-name">
+            <p>-Thor, God of Thunder</p>
+        </div>
     </div>
     <div class="bottom-section">
-        <div class="blue-banner">
+        <div class="blue-banner white-text">
             <div class="banner-text">
                 <h3 class="white-text">Call to action! It is time!</h3>
-                <p class="white-text">Sign up for our product by clicking that button right over there!</p>
+                <p>Sign up for our product by clicking that button right over there!</p>
             </div>
-            <span class="white-border white-text">Sign up</span>
+            <span class="button white-border">Sign up</span>
         </div>
     </div>
     <div class="footer">
