--- a/index.html
+++ b/index.html
@@ -19,17 +19,19 @@
     </div>
     <div class="top-section">
         <div class="left-panel white-text">
-            <h1>This website is awesome</h1>
-            <p>This website has some subtext that goes here under the main title. It is a smaller
-                font and the color is lower contrast</p>
-            <span class="button">Sign up</span>
+            <div class="left-panel-text">
+                <h1 style="font-size: 45px">This website is awesome</h1>
+                <p>This website has some subtext that goes here under the main title. It is a smaller
+                    font and the color is lower contrast</p>
+            </div>
+            <span style="font-weight: bolder;" class="button">Sign up</span>
         </div>
         <div class=right-panel>
             <div>This is a placeholder for an image</div>
         </div>
     </div>
     <div class="information">
-        <h2 class="black-text">Some random information.</h2>
+        <h2 style="font-size: 35px" class="black-text">Some random information.</h2>
         <div class="boxes">
             <div class="box">
                 <div class="blue-border"></div>
@@ -62,7 +64,7 @@
                 <h3 class="white-text">Call to action! It is time!</h3>
                 <p>Sign up for our product by clicking that button right over there!</p>
             </div>
-            <span class="button white-border">Sign up</span>
+            <span style="font-weight: bolder;" class="button white-border">Sign up</span>
         </div>
     </div>
     <div class="footer">
